--- a/index.html.html
+++ b/index.html.html
@@ -84,7 +84,7 @@
 <body>
   <div class="container">
 <header>
-    <img src="images/hoiann.jpg" width="860" height="400">
+    <img src="hoiann.jpg" width="860" height="400">
 	
 </header>
 <nav>
@@ -100,7 +100,7 @@
 	  công nhận là Di sản Văn hóa Thế giới từ năm 1999 nhờ vào vẻ đẹp kiến trúc độc đáo và
 	  giá trị văn hóa truyền thống lâu đời.</p>
 	  <div class="text_center">
-	     <img src="images/hoian1.jpg" width="80%">
+	     <img src="hoian1.jpg" width="80%">
 	</div>
 </section>
 
@@ -113,9 +113,9 @@
         <li><strong>Phố Cổ Hội An:</strong> Những con phố hẹp với các ngôi nhà cổ kính, cửa hàng bán đồ thủ công mỹ nghệ và các món ăn đặc sản.</li>
     </ul>
     <div class="image-gallery">
-        <img src="images/nhacotanky.jpg" alt="Nhà Cổ Tấn Ký">
-        <img src="images/chuacau.jpg" alt="Chùa Cầu">
-        <img src="images/phocohoian.jpg" alt="Phố Cổ Hội An">
+        <img src="nhacotanky.jpg" alt="Nhà Cổ Tấn Ký">
+        <img src="chuacau.jpg" alt="Chùa Cầu">
+        <img src="phocohoian.jpg" alt="Phố Cổ Hội An">
     </div>
 </section>
 
@@ -128,9 +128,9 @@
         <li><strong>Bánh Bao, Bánh Vạc:</strong> Những món bánh truyền thống với vỏ mỏng, nhân tôm thịt hấp dẫn.</li>
     </ul>
     <div class="image-gallery">
-        <img src="images/caolau.jpg" alt="Cao Lầu">
-        <img src="images/miquang.jpg" alt="Mì Quảng">
-        <img src="images/banhbao.jpg" alt="Bánh Bao, Bánh Vạc">
+        <img src="caolau.jpg" alt="Cao Lầu">
+        <img src="miquang.jpg" alt="Mì Quảng">
+        <img src="banhbao.jpg" alt="Bánh Bao, Bánh Vạc">
     </div>
 </section>
 
@@ -142,9 +142,9 @@
         <li><strong>Lễ Hội Đèn Lồng:</strong> Được tổ chức vào các đêm rằm, khi phố cổ Hội An ngập tràn ánh sáng từ hàng nghìn chiếc đèn lồng.</li>
     </ul>
     <div class="image-gallery">
-        <img src="images/trungthu.jpg" alt="Lễ Hội Trung Thu">
-        <img src="images/tetnguyendan.jpg" alt="Lễ Hội Tết Nguyên Đán">
-        <img src="images/lehoidenlong.jpg" alt="Lễ Hội Đèn Lồng">
+        <img src="trungthu.jpg" alt="Lễ Hội Trung Thu">
+        <img src="tetnguyendan.jpg" alt="Lễ Hội Tết Nguyên Đán">
+        <img src="lehoidenlong.jpg" alt="Lễ Hội Đèn Lồng">
     </div>
 </section>
 </body>
