--- a/index3.html.html
+++ b/index3.html.html
@@ -61,14 +61,13 @@
             <h2>Hội An - Nhà Cổ Tấn Ký</h2>
             <p><ul>
              <li><strong>Tham quan kiến trúc cổ:</strong> Khám phá kiến trúc độc đáo với sự kết hợp giữa các nền văn hóa Việt, Hoa, Nhật.</li>
-			 <img src="images/tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">   <img src="images/tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">
-			 
+			 <img src="/tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">   <img src="tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">			 
              <li><strong>Khám phá hiện vật cổ:</strong> Tìm hiểu các đồ vật cổ trong ngôi nhà, từ đồ gỗ đến sứ, tranh vẽ.</li>
-			 <img src="images/tannky.jpg" alt="Tấn Ký" width="820" height="310">
+			 <img src="tannky.jpg" alt="Tấn Ký" width="820" height="310">
              <li><strong>Lớp học thủ công:</strong> Tham gia làm lồng đèn hoặc các sản phẩm thủ công truyền thống.</li>
-			 <img src="images/denlongg.jpg" alt="Đèn Lồng" width="820" height="310">
+			 <img src="denlongg.jpg" alt="Đèn Lồng" width="820" height="310">
 			 <li><strong>Lớp học nấu ăn:</strong> Học cách chế biến món ăn đặc sản như cao lầu, bánh bao, bánh vạc.</li>
-			 <img src="images/nauan.jpg" alt="Đèn Lồng" width="820" height="310">
+			 <img src="nauan.jpg" alt="Đèn Lồng" width="820" height="310">
              <li><strong>Chụp ảnh:</strong> Lưu lại những khoảnh khắc đẹp với không gian cổ kính.</li>
              <li><strong>Tìm hiểu lịch sử gia đình Tấn Ký:</strong> Khám phá câu chuyện của gia đình Tấn Ký qua các hiện vật và triển lãm.</li>
           </ul>
@@ -80,13 +79,13 @@
             <h2>Chùa Cầu</h2>
             <p><ul>
              <li><strong>Tham quan kiến trúc Chùa Cầu:</strong> Chiêm ngưỡng công trình kiến trúc độc đáo với cầu gỗ nối liền giữa hai bờ sông, mang ảnh hưởng văn hóa Nhật Bản và Trung Hoa.</li>
-			 <img src="images/tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">   <img src="images/tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">
+			 <img src="tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">   <img src="tanky.jpg" alt="Nhà Cổ Tấn Ký" width="410" height="300">
              <li><strong>Tham gia lễ cúng:</strong> Du khách có thể tham gia lễ cúng tại chùa, cầu bình an, may mắn và sức khỏe cho gia đình và bản thân.</li>
-			 <img src="images/tannky.jpg" alt="Tấn Ký" width="820" height="310">
+			 <img src="tannky.jpg" alt="Tấn Ký" width="820" height="310">
              <li><strong>Thưởng thức không gian yên bình:</strong> Chùa Cầu là nơi thanh tịnh, lý tưởng để thư giãn, tận hưởng không khí yên bình của Hội An.</li>
-			 <img src="images/denlongg.jpg" alt="Đèn Lồng" width="820" height="310">
+			 <img src="denlongg.jpg" alt="Đèn Lồng" width="820" height="310">
 			 <li><strong>Lễ hội đèn lồng:</strong> Vào các dịp lễ hội, đặc biệt là vào rằm, Chùa Cầu trở nên lung linh với hàng nghìn chiếc đèn lồng, tạo không gian huyền bí, đẹp mắt.</li>
-			 <img src="images/nauan.jpg" alt="Đèn Lồng" width="820" height="310">
+			 <img src="nauan.jpg" alt="Đèn Lồng" width="820" height="310">
              <li><strong>Chụp ảnh:</strong> Chùa Cầu là nơi lý tưởng để chụp ảnh, đặc biệt là vào buổi tối khi ánh đèn lồng chiếu sáng cầu.</li>
              <li><strong>Tìm hiểu về lịch sử và truyền thuyết:</strong> Khám phá những câu chuyện về sự hình thành và các truyền thuyết xung quanh Chùa Cầu qua các buổi thuyết minh.</li>
           </ul>
@@ -109,7 +108,7 @@
            
           </ul>
 		  </p>
-       <video width="910" height="300" src="video/phocohoian.mp4" type="video/mp4" autoplay="autoplay" controls >
+       <video width="910" height="300" src="phocohoian.mp4" type="video/mp4" autoplay="autoplay" controls >
       </video>
 	   </section>
     </main>
